--- a/style.css
+++ b/style.css
@@ -3,4 +3,22 @@ body {
 	   and use the OS’s UI font as the website font
 	 */
 	font: 100%/1.5 system-ui;
+	max-width: 100ch;
+	margin-inline: max(1em, (100% - 100ch) / 2);
+	padding: 1cm;
+}
+
+nav {
+	display: flex;
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: oklch(80% 3% 200);
+}
+
+nav a {
+	flex: 1;
+	text-decoration: none;
+	color: inherit;
+	text-align: center;
+	padding: 0.5em;
 }
