--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+:root {
+--grey: oklch(80% 3% 200);
+--white: #ffffff;
+--color-accent: oklch(65% 50% 0);
+--color-accent-opac: oklch(65% 50% 0 / 20%);
+}
+
 body {
 	/* Set line height to 1.5 times the font size
 	   and use the OS’s UI font as the website font
@@ -12,7 +19,7 @@ nav {
 	display: flex;
 	border-bottom-width: 1px;
 	border-bottom-style: solid;
-	border-bottom-color: oklch(80% 3% 200);
+	border-bottom-color: var(--grey);
 }
 
 nav a {
@@ -21,4 +28,49 @@ nav a {
 	color: inherit;
 	text-align: center;
 	padding: 0.5em;
+}
+
+nav .current {
+    border-bottom-width: 0.4em;
+	border-bottom-style: solid;
+	border-bottom-color: var(--grey);
+    padding-bottom: 0.1em;
+	font-weight: bold;
+}
+
+nav a:hover {
+	border-bottom-width: 0.4em;
+	border-bottom-style: solid;
+	border-bottom-color: var(--color-accent);
+	padding-bottom: 0.1em;
+	background-color: var(--color-accent-opac);
+}
+
+/* input, textarea, button {
+	font: inherit;
+	width: 100%;
+	box-sizing: border-box;
+}
+
+label, input, textarea, button{
+	display: block;
+}
+
+label {
+	margin-block: 1rem;
+} */
+
+form {
+    display: grid;
+    grid-template-columns: auto 1fr;
+	gap: 1em;
+}
+
+form label{
+    display: grid;
+    grid-template-columns:  subgrid;
+}
+
+button, label{
+    grid-column: 1 / -1;
 }
