--- a/resume/styles.css
+++ b/resume/styles.css
@@ -1,8 +1,50 @@
+:root {
+    --grey: oklch(80% 3% 200);
+    --white: #ffffff;
+    --color-accent: oklch(65% 50% 0);
+    --color-accent-opac: oklch(65% 50% 0 / 20%);
+    }
+
 body {
+    /* Set line height to 1.5 times the font size
+    and use the OS’s UI font as the website font
+    */
+    font: 100%/1.5 system-ui;
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-    background-color: white;
+    max-width: 100ch;
+    margin-inline: max(1em, (100% - 100ch) / 2);
+    padding: 1cm;
+}
+
+nav {
+    display: flex;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: var(--grey);
+}
+
+nav a {
+    flex: 1;
+    text-decoration: none;
+    color: inherit;
+    text-align: center;
+    padding: 0.5em;
+}
+
+nav .current {
+    border-bottom-width: 0.4em;
+    border-bottom-style: solid;
+    border-bottom-color: var(--grey);
+    padding-bottom: 0.1em;
+    font-weight: bold;
+}
+
+nav a:hover {
+    border-bottom-width: 0.4em;
+    border-bottom-style: solid;
+    border-bottom-color: var(--color-accent);
+    padding-bottom: 0.1em;
+    background-color: var(--color-accent-opac);
 }
 
 h2 {
